--- a/EagleTruePilates/css/header.css
+++ b/EagleTruePilates/css/header.css
@@ -1,6 +1,37 @@
-h1{
+h1 {
     text-align: center;
     font-family: 'Amatic SC', cursive;
     font-size: 112px;
     font-weight: normal;
+    margin-top: unset;
+}
+
+.nav-bar {
+    text-align: center;
+    letter-spacing: 4px;
+    font-size: large;
+    padding-top: 20px;
+}
+
+.nav-bar > ul > li {
+    text-align: center;
+    display: inline;
+    list-style: none;
+}
+
+.nav-bar > ul > li > a {
+    text-decoration: none;
+    padding: 0 10px;
+    color: black;
+}
+
+.nav-bar > ul > li > a:hover {
+    color: darkcyan;
+    text-decoration: underline;
+    font-size: larger;
+}
+
+#currentpage {
+    color: darkcyan;
+    font-size: larger;
 }
