--- a/EagleTruePilates/css/index.css
+++ b/EagleTruePilates/css/index.css
@@ -29,7 +29,9 @@ img {
 
 .boxwrapper {
     text-align: center;
-    margin: 40px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: #d8e0ea;
 }
 
 .box {
