--- a/EagleTruePilates/css/about.css
+++ b/EagleTruePilates/css/about.css
@@ -57,5 +57,7 @@ h5 {
     width: 70%;
     display: inline-block;
     min-width: 300px;
+    max-width: 400px;
     margin: 20px;
+    box-shadow: 5px 7px 20px #888888;
 }
