--- a/EagleTruePilates/css/header.css
+++ b/EagleTruePilates/css/header.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    overflow-x: hidden;
 }
 
 h1 {
@@ -105,4 +106,8 @@ h1 {
     border-top: 5px solid black;
     display: inline-block;
     padding-bottom: 2px;
+}
+
+.arrow-down:hover .dropbtn {
+    color: darkcyan;
 }
