added login and sign up fuctionality

--- a/css/services.css
+++ b/css/services.css
@@ -1,8 +1,15 @@
+.form_wrapper {
+    text-align: center;
+}
+
 /* Bordered form */
 form {
     border: 3px solid #f1f1f1;
-    width: 50%;
+    width: 300px;
     display: inline-block;
+    margin: auto;
+    vertical-align: top;
+    text-align: left;
 }
 
 /* Full-width inputs */
@@ -38,27 +45,10 @@ button:hover {
     background-color: #f44336;
 }
 
-/* Center the avatar image inside this container */
-.imgcontainer {
-    text-align: center;
-    margin: 24px 0 12px 0;
-}
-
-/* Avatar image */
-img.avatar {
-    width: 40%;
-    border-radius: 50%;
-}
-
 /* Add padding to containers */
 .container {
     padding: 16px;
-}
-
-/* The "Forgot password" text */
-span.psw {
-    float: right;
-    padding-top: 16px;
+    background-color: #f1f1f1;
 }
 
 /* Change styles for span and cancel button on extra small screens */
@@ -70,4 +60,14 @@ span.psw {
     .cancelbtn {
         width: 100%;
     }
+}
+
+.message {
+    color: firebrick;
+}
+
+#or {
+    display: inline-block;
+    color: grey;
+    margin: 100px;
 }
