--- a/css/header.css
+++ b/css/header.css
@@ -9,15 +9,18 @@ h1 {
     font-weight: normal;
     margin-top: unset;
     line-height: 178px;
-}
+    display: inline-block;
+    margin-bottom: -15px;
+    vertical-align: text-bottom;}
 
 #header {
     text-align: center;
+    margin-bottom: 50px;
 }
 
 #logo {
-    display:inline;
-    width: auto;
+    display:inline-block;
+    width: 150px;
     height: auto;
     min-width: 0;
 }
@@ -47,9 +50,14 @@ h1 {
     font-size: larger;
 }
 
+#arrow {
+    margin: 1px;
+}
+
 #currentpage {
     color: darkcyan;
     font-size: larger;
+    margin: 0;
 }
 
 .dropbtn {
@@ -64,13 +72,14 @@ h1 {
 .dropdown {
     position: relative;
     display: inline-block;
+    margin: 0;
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 160px;
+    min-width: 167px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -90,12 +99,14 @@ h1 {
 
 .dropdown:hover .dropdown-content {
     display: block;
+    margin: 0;
 }
 
 .dropdown:hover .dropbtn {
     background-color: #f1f1f1;
     color: darkcyan;
     font-size: larger;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 .arrow-down {
