--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     overflow-x: hidden;
+    font-family: 'Nunito', sans-serif;
 }
 
 h1 {
@@ -11,7 +12,20 @@ h1 {
     line-height: 178px;
     display: inline-block;
     margin-bottom: -15px;
-    vertical-align: text-bottom;}
+    vertical-align: text-bottom;
+}
+
+h2 {
+    text-align: center;
+    font-size: 42px;
+    font-weight: 200;
+}
+
+h3 {
+    text-transform: uppercase;
+    color: grey;
+    letter-spacing: 3px;
+}
 
 #header {
     text-align: center;
@@ -64,7 +78,7 @@ h1 {
     background-color: white;
     padding: 16px;
     font-size: large;
-    font-family: initial;
+    font-family: 'Nunito', sans-serif;
     letter-spacing: 4px;
     border: none;
 }
@@ -79,7 +93,7 @@ h1 {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 167px;
+    min-width: 169px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
