--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,80 @@ h3 {
     color: darkcyan;
 }
 
+.form_wrapper {
+    text-align: center;
+}
+
+/* Bordered form */
+form {
+    border: 3px solid #f1f1f1;
+    width: 300px;
+    display: inline-block;
+    margin: auto;
+    vertical-align: top;
+    text-align: left;
+}
+
+/* Full-width inputs */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+form > button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+/* Add a hover effect for buttons */
+form > button:hover {
+    opacity: 0.8;
+}
+
+/* Extra style for the cancel button (red) */
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+}
+
+/* Add padding to containers */
+.container {
+    padding: 16px;
+    background-color: #f1f1f1;
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+    span.psw {
+        display: block;
+        float: none;
+    }
+    .cancelbtn {
+        width: 100%;
+    }
+}
+
+.message {
+    color: firebrick;
+}
+
+#or {
+    display: inline-block;
+    color: grey;
+    margin: 100px;
+}
+
 @media only screen and (max-width: 1200px) {
     .body_container {
         margin: 20px 50px;
