--- a/css/schedule.css
+++ b/css/schedule.css
@@ -1,4 +1,5 @@
 #calendar {
+    margin-top: 50px;
 }
 
 .login_button {
@@ -26,7 +27,6 @@
 
 input {
     box-sizing: border-box;
-    height: 2.1em;
     padding: 0 .6em;
     font-size: 1em;
     white-space: nowrap;
@@ -54,3 +54,27 @@ th, td {
 }
 
 tr:nth-child(even){background-color: #f2f2f2}
+
+.custom-select {
+    padding: 5px 12px;
+    font-family: 'Nunito', sans-serif;
+}
+
+#link_form {
+    border: none;
+    text-align: right;
+    width: 100%;
+    color: blue;
+}
+
+#link {
+    text-align: right;
+    background:none!important;
+    color:inherit;
+    border:none;
+    padding:0!important;
+    font: inherit;
+    /*border is optional*/
+    border-bottom:1px solid blue;
+    cursor: pointer;
+}
