--- a/css/schedule.css
+++ b/css/schedule.css
@@ -50,7 +50,7 @@ table {
 #instructor_classes tbody {
     display: block;
     overflow-y: scroll;
-    max-height: 412px;
+    max-height: 445px;
 }
 
 th, td {
@@ -73,6 +73,7 @@ tr:nth-child(even){background-color: #f2f2f2}
 }
 
 #link {
+    margin-top: 20px;
     text-align: right;
     background:none!important;
     color:inherit;
